tests/sad_other_statement_in_declr.msh
// error: line 7: near: ';': Only declarations allowed in block DECLR header
// Compilation error
DECLR
	x: int;
	a: int;
	b: int;
	b := a + c;
BEGIN
	a := 2;
	b := 4;
	c := -8;
	x := a * -c + b * -c;
	print x;
	print c;
END
